2005-07-10  Sven Neumann  <sven@gimp.org>

	* app/base/segmentator.[ch]: ported to GIMP data structures. There
	are still some TODOs, smooth_mask() isn't implemented yet.

	* app/core/Makefile.am
	* app/core/gimpdrawable-foreground-extract.[ch]: thin wrapper around
	the new segmentation algorithm.

	* tools/pdbgen/pdb/drawable.pdb: added a first draft of a PDB API
	for foreground extraction.

	* app/pdb/drawable_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpdrawable_pdb.[ch]: regenerated.

2005-07-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.c: removed if(image) checks where the image
	can't be NULL.

2005-07-09  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.[ch]: formatting.

	* app/core/gimpchannel.c (gimp_channel_real_feather):
	gaussian_blur_region() writes to the pixel data, need to initialize
	the pixel region with dirty == TRUE;

	* app/paint-funcs/paint-funcs-generic.h: formatting.

2005-07-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsamplepointeditor.[ch]: added "sample-merged"
	property and API. Pass it to gimp_image_pick_color().

	* app/actions/Makefile.am
	* app/actions/actions.c
	* app/actions/sample-point-editor-actions.[ch]
	* app/actions/sample-point-editor-commands.[ch]: actions and
	callbacks for the sample point editor's menu.

	* app/widgets/gimphelp-ids.h: its help IDs.

	* app/menus/menus.c
	* menus/Makefile.am
	* menus/sample-point-editor-menu.xml: the sample point editor menu.

2005-07-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-pick-color.c (gimp_image_pick_color): if
	sample_merged is FALSE and drawable is NULL, just get the image's
	active drawable instead of bailing out.

	* app/widgets/gimpcursorview.c (gimp_cursor_view_update_cursor):
	use gimp_image_pick_color() insted of duplicating its code.

2005-07-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewabledialog.c: ellipsize the name label.

2005-07-09  Michael Natterer  <mitch@gimp.org>
