@@ -45,7 +45,8 @@
 #include "gimpcontrollers.h"
 #include "gimpdialogfactory.h"
 #include "gimphelp-ids.h"
-#include "gimpmessagedialog.c"
+#include "gimpmessagebox.h"
+#include "gimpmessagedialog.h"
 #include "gimppropwidgets.h"
 #include "gimpuimanager.h"
 #include "gimpviewabledialog.h"
